# asigmentDAT305

./: .gitignore  README.md  convolutional_neural_network.ipynb  k_nearest_neighbour.ipynb  main.ipynb  main.py  pyproject.toml
logs/: events.out.tfevents.1762423961.wallace.21296.8  events.out.tfevents.1762424170.wallace.21296.9  events.out.tfevents.1762519050.wallace.38932.3
